Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/education/zenith-english.mdx
+++ b/vi/03-thiet-ke/education/zenith-english.mdx
@@ -2,6 +2,161 @@
 title: "ZENITH ENGLISH - BẢN THIẾT KẾ CẤU HÌNH TOÀN CỤC (Vietnamese Version)"
 ---
 
+<Expandable title="Scripts note">
+  Chắc chắn rồi. Dựa trên bản thiết kế hệ thống Zenith English chúng ta vừa xây dựng, đây là một kịch bản thuyết trình chi tiết, tập trung vào việc trình bày **dòng chảy vận hành thông suốt nhờ tự động hóa**.
+
+  Kịch bản này được thiết kế để một người quản lý hoặc tư vấn viên có thể trình bày cho ban lãnh đạo hoặc các trưởng phòng ban của trung tâm.
+
+  ---
+
+  ### **Kịch Bản Thuyết Trình: Xây Dựng Dòng Chảy Vận Hành Tự Động cho Trung tâm Anh ngữ Zenith**
+
+  Đối tượng: Ban Giám đốc, các Trưởng phòng ban (Học thuật, Tuyển sinh, Marketing, Vận hành).
+
+  Mục tiêu: Chứng minh làm thế nào hệ thống Luklak có thể loại bỏ các "nút thắt cổ chai", kết nối các phòng ban và tạo ra một quy trình vận hành liền mạch, hiệu quả từ đầu đến cuối.
+
+  ---
+
+  **(Slide 1: Màn hình Tiêu đề)**
+
+  - **Tiêu đề:** Tối Ưu Hóa Vận Hành Trung tâm Anh ngữ Zenith
+  - **Tiêu đề phụ:** Xây dựng Dòng chảy Thông tin & Công việc Tự động, Thông suốt trên Nền tảng Hợp nhất Luklak
+  - **Người trình bày:** [Tên của bạn/Phòng ban]
+  - **Ngày:** 21 tháng 8 năm 2025
+
+  Script:
+
+  "Xin kính chào Ban Lãnh đạo và các anh chị Trưởng phòng ban. Tôi là [Tên], và hôm nay, tôi muốn trình bày về một giải pháp chiến lược để giải quyết những thách thức vận hành cốt lõi mà chúng ta đang đối mặt hàng ngày. Chúng ta sẽ cùng nhau khám phá cách biến Zenith English thành một cỗ máy vận hành hiệu quả, thông suốt, nơi công nghệ thực sự phục vụ con người, thông qua một dòng chảy tự động hóa toàn diện."
+
+  ---
+
+  **(Slide 2: Nỗi đau Hiện tại - Vận hành Rời rạc)**
+
+  - (Hình ảnh biểu đồ với các mũi tên đứt gãy, các silo thông tin giữa Marketing, Sales, Học thuật...)
+  - **Marketing & Tuyển sinh:** Dữ liệu lead bị thất lạc khi chuyển giao. Nhân viên mất thời gian nhập liệu thủ công.
+  - **Tuyển sinh & Tài chính:** Quy trình tạo hợp đồng, thu học phí chậm trễ, sai sót. Khó theo dõi công nợ.
+  - **Tài chính & Học thuật:** Thông tin học viên đã đóng phí không được cập nhật kịp thời cho bộ phận học thuật để xếp lớp.
+  - **Học thuật & Chăm sóc Học viên:** Giáo viên tốn thời gian làm báo cáo thủ công. Việc theo dõi tiến độ của từng học viên không nhất quán.
+
+  Script:
+
+  "Hãy cùng nhìn lại thực trạng. Dữ liệu của chúng ta đang bị phân mảnh. Marketing đổ lead về nhưng có thể bị 'rơi rụng' đâu đó trong file Excel của đội Tuyển sinh. Tư vấn viên chốt được học viên, nhưng kế toán lại phải hỏi đi hỏi lại thông tin để làm hợp đồng. Học viên đóng tiền rồi nhưng phòng Học thuật vẫn chưa nhận được thông báo để xếp lớp. Mỗi điểm chạm, mỗi lần chuyển giao công việc giữa các phòng ban là một 'nút thắt cổ chai' tiềm tàng, gây ra sự chậm trễ, sai sót và làm giảm trải nghiệm của cả nhân viên và khách hàng."
+
+  ---
+
+  **(Slide 3: Giải pháp - Một Dòng chảy Hợp nhất)**
+
+  - (Hình ảnh sơ đồ hệ thống Zenith English trên Luklak, các phòng ban được kết nối bằng mũi tên liền mạch)
+  - **Một Nguồn Thông tin Duy nhất:** Mọi dữ liệu từ lead, hợp đồng, lớp học, học viên... đều nằm trên một nền tảng.
+  - **Xương sống là Tự động hóa:** Thay vì con người phải "đẩy" công việc đi, hệ thống sẽ tự động luân chuyển thông tin và kích hoạt hành động tiếp theo.
+  - **Tầm nhìn:** Biến quy trình vận hành thành một dòng sông chảy, không còn những "đập ngăn" giữa các phòng ban.
+
+  Script:
+
+  "Giải pháp chúng tôi đề xuất là xây dựng một 'xương sống' vận hành duy nhất trên nền tảng Luklak. Trọng tâm của giải pháp này không chỉ là số hóa, mà là tự động hóa toàn bộ dòng chảy công việc. Hãy tưởng tượng, khi một hành động ở khâu trước kết thúc, nó sẽ là cò súng kích hoạt cho hành động ở khâu sau một cách tức thời, chính xác và không cần bất kỳ sự can thiệp thủ công nào."
+
+  ---
+
+  **(Slide 4: Lặn sâu vào Dòng chảy Tự động hóa)**
+
+  - (Sơ đồ hành trình của một học viên, từ lúc là người lạ đến khi tốt nghiệp, với các điểm tự động hóa được đánh dấu)
+  - **Giai đoạn 1:** Từ Người lạ → Lead tiềm năng
+  - **Giai đoạn 2:** Từ Lead → Học viên chính thức
+  - **Giai đoạn 3:** Từ Học viên → Thành công & Gắn bó
+
+  Script:
+
+  "Bây giờ, chúng ta sẽ đi vào chi tiết cách dòng chảy này hoạt động trong thực tế, qua 3 giai đoạn chính trong hành trình của một học viên tại Zenith."
+
+  ---
+
+  **(Slide 5: Giai đoạn 1: Marketing → Tuyển sinh LIỀN MẠCH)**
+
+  - (Sơ đồ chi tiết: Website -\> Luklak -\> Thông báo cho đội Tuyển sinh)
+  - **[CS-01] Lead từ Website tự động vào hệ thống:** Khách hàng điền form trên landing page, một `Lead` mới ngay lập tức được tạo trong CRM của đội Tuyển sinh, đính kèm chính xác thông tin `Ad` nguồn.
+    - **Kết quả:** Không còn sót lead. Đo lường hiệu quả marketing chính xác 100%.
+  - **[CF-01] Hệ thống tự động thông báo:** Ngay khi `Lead` được tạo, hệ thống gửi tin nhắn @mention cho nhóm `Admissions Team` trên Luklak Chat.
+    - **Kết quả:** Giảm thời gian phản hồi lead từ hàng giờ xuống còn vài phút, tăng tối đa cơ hội chuyển đổi.
+
+  Script:
+
+  "Mọi thứ bắt đầu khi một khách hàng tiềm năng thấy quảng cáo của chúng ta.
+
+  1. **Quy tắc CS-01:** Ngay khi họ điền form, thông tin không đi vào email hay file Excel, mà được đẩy thẳng vào Luklak và tạo ra một đối tượng `Lead` mới. Chúng ta biết chính xác họ đến từ quảng cáo nào.
+  2. **Quy tắc CF-01:** Cùng lúc đó, hệ thống tự động 'réo' đội tư vấn. Một lead nóng hổi được xử lý ngay lập tức. Dòng chảy thông tin từ Marketing đến Tuyển sinh diễn ra trong tích tắc."
+
+  ---
+
+  **(Slide 6: Giai đoạn 2: Tuyển sinh → Tài chính → Học vụ CHẶT CHẼ)**
+
+  - (Sơ đồ: Lead đạt test -\> Tự tạo Hợp đồng -\> Ký kết -\> Tự tạo Hồ sơ Học viên)
+  - **[CF-02] Lead đạt bài test → Tự động tạo Hợp đồng:** Tư vấn viên chỉ cần chuyển trạng thái `Lead` thành "Test Passed". Hệ thống ngay lập tức tạo ra một `Hợp đồng Nhập học` ở phòng Tài chính với đầy đủ thông tin.
+    - **Kết quả:** Tư vấn viên không mất thời gian soạn thảo. Hợp đồng chính xác, chuyên nghiệp.
+  - **[CS-04] & [CF-03] Ký kết & Thanh toán → Tự động tạo Hồ sơ Học viên:** Khi `Hợp đồng` được ký và khoản thanh toán đầu tiên được ghi nhận (qua cổng thanh toán hoặc kế toán xác nhận), hệ thống tự động:
+    1. Tạo ra một `Hồ sơ Học viên` chính thức tại phòng Công tác Học viên.
+    2. Gửi email chào mừng tới học viên.
+    - **Kết quả:** Quy trình nhập học chuyên nghiệp, không có độ trễ. Dữ liệu học viên được đồng bộ ngay lập tức cho các phòng ban liên quan.
+
+  Script:
+
+  "Khi tư vấn viên đã thuyết phục được khách hàng, dòng chảy tiếp tục:
+
+  1. **Quy tắc CF-02:** Tư vấn viên không cần gửi email yêu cầu làm hợp đồng. Anh/chị ấy chỉ cần một cú nhấp chuột, hệ thống sẽ tự động tạo hợp đồng và gửi cho Kế toán.
+  2. **Quy tắc CF-03:** Thời điểm học viên hoàn tất thanh toán chính là khoảnh khắc kỳ diệu. Hệ thống tự động 'khai sinh' ra một `Hồ sơ Học viên` hoàn chỉnh. Từ đây, họ không còn là một `Lead` nữa, mà đã chính thức trở thành một thành viên của Zenith. Dòng chảy giữa Tuyển sinh, Tài chính và Công tác Học viên được kết nối hoàn hảo."
+
+  ---
+
+  **(Slide 7: Giai đoạn 3: Vận hành Học thuật & Chăm sóc CHỦ ĐỘNG)**
+
+  - (Sơ đồ: Thanh toán -\> Báo xếp lớp -\> Lớp kết thúc -\> Tự tạo Báo cáo tiến độ)
+  - **[CF-04] Có thanh toán → Báo ngay cho phòng Học thuật:** Ngay khi `Hóa đơn` đầu tiên được ghi nhận "Đã thanh toán", hệ thống @mention `Quản lý Học thuật` để tiến hành xếp lớp.
+    - **Kết quả:** Không còn tình trạng học viên đã đóng tiền mà phải chờ đợi mòn mỏi để được đi học.
+  - **[CF-05] Lớp học kết thúc → Kích hoạt quy trình Báo cáo:** Khi `Lớp học` được chuyển trạng thái "Hoàn thành", hệ thống tự động tạo các phiếu `Báo cáo Tiến độ` trống và giao cho giáo viên phụ trách của lớp đó.
+    - **Kết quả:** Đảm bảo 100% học viên được nhận báo cáo đúng hạn. Giáo viên được nhắc việc một cách hệ thống, giảm gánh nặng hành chính.
+
+  Script:
+
+  "Và cuối cùng, khi học viên đã vào học, hệ thống tiếp tục là trợ lý đắc lực:
+
+  1. **Quy tắc CF-04:** Tiền vừa vào tài khoản, phòng Học thuật nhận được thông báo ngay. Việc xếp lớp diễn ra nhanh chóng, thể hiện sự chuyên nghiệp của chúng ta.
+  2. **Quy tắc CF-05:** Khi một khóa học kết thúc, giáo viên không cần phải nhớ hay được ai nhắc nhở. Hệ thống tự động giao nhiệm vụ làm báo cáo tiến độ cho từng học viên. Chúng ta chủ động trong việc chăm sóc và thể hiện sự quan tâm đến kết quả của học viên."
+
+  ---
+
+  **(Slide 8: Lợi ích Toàn diện)**
+
+  - **Với Ban Lãnh đạo:**
+    - Nắm bắt dữ liệu vận hành real-time trên Dashboard (tỷ lệ chuyển đổi, doanh thu, sĩ số lớp...).
+    - Dễ dàng phát hiện "điểm nghẽn" trong quy trình để cải tiến.
+  - **Với Nhân viên:**
+    - Giảm \>80% thời gian cho các công việc thủ công, lặp đi lặp lại.
+    - Tập trung vào chuyên môn: tư vấn, giảng dạy, chăm sóc học viên.
+    - Phối hợp giữa các phòng ban không còn "ma sát".
+  - **Với Học viên:**
+    - Trải nghiệm một dịch vụ chuyên nghiệp, liền mạch và nhanh chóng.
+    - Cảm thấy được quan tâm và chăm sóc một cách chủ động.
+
+  Script:
+
+  "Vậy, dòng chảy tự động này mang lại điều gì? Với Ban lãnh đạo, đó là sự minh bạch và khả năng kiểm soát. Với nhân viên, đó là sự giải thoát khỏi các công việc thủ công nhàm chán để tập trung vào giá trị cốt lõi. Và quan trọng nhất, với học viên, đó là một trải nghiệm vượt trội, yếu tố then chốt giữ chân họ và biến họ thành người giới thiệu trung thành."
+
+  ---
+
+  **(Slide 9: Tổng kết & Hành động Tiếp theo)**
+
+  - **Tổng kết:** Chúng ta không chỉ mua một phần mềm. Chúng ta đang kiến tạo một **hệ thống vận hành tự chủ**, một dòng chảy thông minh kết nối tất cả các bộ phận của Zenith English.
+  - **Hành động tiếp theo:**
+    - Thảo luận và phê duyệt bản thiết kế chi tiết.
+    - Lên kế hoạch triển khai theo từng giai đoạn.
+  - **Q&A - Hỏi & Đáp**
+
+  Script:
+
+  "Tóm lại, những gì tôi vừa trình bày không phải là về các tính năng riêng lẻ, mà là về việc xây dựng một hệ thống vận hành có tính kết nối và tự chủ. Đây là bước đi nền tảng để Zenith không chỉ phát triển về quy mô, mà còn xuất sắc về chất lượng vận hành.
+
+  Xin chân thành cảm ơn sự lắng nghe của quý vị. Bây giờ là thời gian cho phần hỏi đáp."
+</Expandable>
+
 ---
 
 ### **PHẦN 1: CẤU TRÚC TỔ CHỨC & KHÔNG GIAN LÀM VIỆC**
@@ -238,37 +393,35 @@ Thông báo tự động dựa trên các bộ lọc đã lưu để đảm bả
 | **Nhắc hạn thanh toán hóa đơn**        | **Nguồn:** `Finance/🧊Invoice`\<br\>**Logic:** `Ngày đến hạn` trong vòng 7 ngày tới VÀ `Trạng thái` KHÁC "Đã thanh toán".                 | Hàng ngày lúc 9:00 SA | - `Kế toán`\<br\>- `Tư vấn viên Tuyển sinh` |
 | **Nhắc theo dõi Lead không hoạt động** | **Nguồn:** `Admissions/🧊Lead`\<br\>**Logic:** `Ngày cập nhật cuối` hơn 14 ngày trước VÀ `Trạng thái` KHÁC "Đã nhập học" HOẶC "Thất bại". | Hàng ngày lúc 8:30 SA | - `Tư vấn viên Tuyển sinh`                  |
 
-
 Excellent. Here is **PART 5: GLOBAL LOGIC & AUTOMATION** in both English and Vietnamese.
 
 ---
-
 
 ### **PHẦN 5: LOGIC & TỰ ĐỘNG HÓA TOÀN CỤC (Vietnamese Version)**
 
 #### **5.1. Tự động hóa Liên-hệ-thống (Cross-system Automation)**
 
-* **Mô tả:** Các quy tắc kết nối Luklak với các ứng dụng và dịch vụ bên ngoài (ví dụ: Website, Lịch Google, Cổng thanh toán, Email).
+- **Mô tả:** Các quy tắc kết nối Luklak với các ứng dụng và dịch vụ bên ngoài (ví dụ: Website, Lịch Google, Cổng thanh toán, Email).
 
-| Mã Rule | Tên Rule | Mô tả Nghiệp vụ |
-| :--- | :--- | :--- |
-| **CS-01** | Nhận Lead từ Website | Khi một biểu mẫu được gửi trên website, một **Webhook** sẽ kích hoạt việc tạo một `Admissions/🧊Lead` và liên kết nó với `Marketing/🧊Ad` nguồn. |
-| **CS-02** | Lên lịch Test trên Lịch Google | Một Tư vấn viên Tuyển sinh nhấp vào một nút trên `Lead`, gửi một **HTTP Request** để tạo một sự kiện trong **Lịch Google** cho bài kiểm tra đầu vào. |
-| **CS-03** | Tạo Thỏa thuận từ Mẫu | Một Kế toán viên nhấp vào một nút trên `Enrollment Agreement`, gửi một **HTTP Request** để điền dữ liệu học viên và khóa học vào một mẫu **Google Docs**. |
+| Mã Rule   | Tên Rule                       | Mô tả Nghiệp vụ                                                                                                                                                              |
+| :-------- | :----------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **CS-01** | Nhận Lead từ Website           | Khi một biểu mẫu được gửi trên website, một **Webhook** sẽ kích hoạt việc tạo một `Admissions/🧊Lead` và liên kết nó với `Marketing/🧊Ad` nguồn.                             |
+| **CS-02** | Lên lịch Test trên Lịch Google | Một Tư vấn viên Tuyển sinh nhấp vào một nút trên `Lead`, gửi một **HTTP Request** để tạo một sự kiện trong **Lịch Google** cho bài kiểm tra đầu vào.                         |
+| **CS-03** | Tạo Thỏa thuận từ Mẫu          | Một Kế toán viên nhấp vào một nút trên `Enrollment Agreement`, gửi một **HTTP Request** để điền dữ liệu học viên và khóa học vào một mẫu **Google Docs**.                    |
 | **CS-04** | Ghi nhận Thanh toán từ Cổng TT | Một **Cổng thanh toán** bên ngoài gửi một **Webhook** khi thanh toán thành công, hệ thống sẽ tìm `Finance/🧊Invoice` tương ứng và cập nhật trạng thái thành "Đã thanh toán". |
-| **CS-05** | Gửi Email Chào mừng | Khi trạng thái `Enrollment Agreement` thay đổi thành "Đã ký", một **Email** tự động được gửi đến học viên với gói chào mừng và hướng dẫn ban đầu. |
+| **CS-05** | Gửi Email Chào mừng            | Khi trạng thái `Enrollment Agreement` thay đổi thành "Đã ký", một **Email** tự động được gửi đến học viên với gói chào mừng và hướng dẫn ban đầu.                            |
 
 #### **5.2. Tự động hóa Liên-chức-năng (Cross-function Automation)**
 
-* **Mô tả:** Các quy tắc điều phối và chuyển giao công việc giữa các phòng ban khác nhau *bên trong* nền tảng Luklak.
+- **Mô tả:** Các quy tắc điều phối và chuyển giao công việc giữa các phòng ban khác nhau _bên trong_ nền tảng Luklak.
 
-| Mã Rule | Tên Rule | Mô tả Nghiệp vụ |
-| :--- | :--- | :--- |
-| **CF-01**| Lead Đạt Test -> Tạo Thỏa thuận | Thay đổi trạng thái trên `Admissions/🧊Lead` thành "Đạt Test" sẽ tự động tạo một `Finance/🧊Enrollment Agreement` mới và liên kết nó với lead. |
-| **CF-02**| Thỏa thuận Đã ký -> Tạo Hồ sơ HV | Thay đổi trạng thái trên `Finance/🧊Enrollment Agreement` thành "Đã ký" sẽ tự động tạo một `Student Affairs/🧊Student Record` mới, chính thức chuyển đổi lead thành học viên. |
-| **CF-03**| Nhận được Thanh toán Lần đầu -> Báo cho P.Học thuật | Thay đổi trạng thái trên `Finance/🧊Invoice` đầu tiên thành "Đã thanh toán" sẽ tự động gửi một Chat @mention đến vai trò `Quản lý Học thuật` để sắp xếp lớp học. |
-| **CF-04**| Thêm HV vào Lớp -> Cập nhật Hồ sơ | Khi một `Student Record` được liên kết với một `Academics/🧊Class`, một quy tắc sẽ tự động cập nhật trường `Các lớp đã đăng ký` trên đối tượng `Student Record`. |
-| **CF-05**| Lớp học Hoàn thành -> Tạo Báo cáo Tiến độ | Thay đổi trạng thái trên `Academics/🧊Class` thành "Hoàn thành" sẽ tự động tạo một `Student Affairs/🧊Progress Report` mới cho mỗi học viên, được giao cho Giáo viên. |
+| Mã Rule   | Tên Rule                                             | Mô tả Nghiệp vụ                                                                                                                                                               |
+| :-------- | :--------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **CF-01** | Lead Đạt Test -\> Tạo Thỏa thuận                     | Thay đổi trạng thái trên `Admissions/🧊Lead` thành "Đạt Test" sẽ tự động tạo một `Finance/🧊Enrollment Agreement` mới và liên kết nó với lead.                                |
+| **CF-02** | Thỏa thuận Đã ký -\> Tạo Hồ sơ HV                    | Thay đổi trạng thái trên `Finance/🧊Enrollment Agreement` thành "Đã ký" sẽ tự động tạo một `Student Affairs/🧊Student Record` mới, chính thức chuyển đổi lead thành học viên. |
+| **CF-03** | Nhận được Thanh toán Lần đầu -\> Báo cho P.Học thuật | Thay đổi trạng thái trên `Finance/🧊Invoice` đầu tiên thành "Đã thanh toán" sẽ tự động gửi một Chat @mention đến vai trò `Quản lý Học thuật` để sắp xếp lớp học.              |
+| **CF-04** | Thêm HV vào Lớp -\> Cập nhật Hồ sơ                   | Khi một `Student Record` được liên kết với một `Academics/🧊Class`, một quy tắc sẽ tự động cập nhật trường `Các lớp đã đăng ký` trên đối tượng `Student Record`.              |
+| **CF-05** | Lớp học Hoàn thành -\> Tạo Báo cáo Tiến độ           | Thay đổi trạng thái trên `Academics/🧊Class` thành "Hoàn thành" sẽ tự động tạo một `Student Affairs/🧊Progress Report` mới cho mỗi học viên, được giao cho Giáo viên.         |
 
 ---
 
@@ -276,54 +429,53 @@ Excellent. Here is **PART 5: GLOBAL LOGIC & AUTOMATION** in both English and Vie
 
 #### **6.1. Lớp 1: Đặc quyền Doanh nghiệp (Business Privilege)**
 
-  * **Mô tả:** Đây là cấp độ quyền hạn cao nhất, hoạt động như "vé vào cổng" toàn bộ hệ thống và xác định quyền lực tiềm năng tối đa của người dùng.
+- **Mô tả:** Đây là cấp độ quyền hạn cao nhất, hoạt động như "vé vào cổng" toàn bộ hệ thống và xác định quyền lực tiềm năng tối đa của người dùng.
 
-| Cấp Đặc quyền | Gán cho (tại Zenith English) | Mô tả Quyền hạn |
-| :--- | :--- | :--- |
-| **Owner** | CEO | Cấp cao nhất. Quản lý thanh toán, có thể chuyển quyền sở hữu và giữ mọi đặc quyền của Admin. |
-| **Admin** | Giám đốc Trung tâm, Quản trị viên Hệ thống | Có thể cấu hình mọi thứ trong hệ thống, từ Cài đặt Toàn cục đến quản lý người dùng. |
-| **App Manager** | Trưởng các Phòng ban (ví dụ: Trưởng phòng Tuyển sinh, Quản lý Học thuật) | Một vai trò chuyên biệt có thể thiết kế, chỉnh sửa và quản lý các Functions 📋. |
-| **Member** | Tất cả nhân viên còn lại (Tư vấn viên, Giáo viên, Kế toán, v.v.) | Đặc quyền tiêu chuẩn cho hầu hết người dùng, cho phép họ làm việc trong các Spaces ⏹️ mà họ được cấp quyền truy cập. |
+| Cấp Đặc quyền   | Gán cho (tại Zenith English)                                             | Mô tả Quyền hạn                                                                                                      |
+| :-------------- | :----------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------- |
+| **Owner**       | CEO                                                                      | Cấp cao nhất. Quản lý thanh toán, có thể chuyển quyền sở hữu và giữ mọi đặc quyền của Admin.                         |
+| **Admin**       | Giám đốc Trung tâm, Quản trị viên Hệ thống                               | Có thể cấu hình mọi thứ trong hệ thống, từ Cài đặt Toàn cục đến quản lý người dùng.                                  |
+| **App Manager** | Trưởng các Phòng ban (ví dụ: Trưởng phòng Tuyển sinh, Quản lý Học thuật) | Một vai trò chuyên biệt có thể thiết kế, chỉnh sửa và quản lý các Functions 📋.                                      |
+| **Member**      | Tất cả nhân viên còn lại (Tư vấn viên, Giáo viên, Kế toán, v.v.)         | Đặc quyền tiêu chuẩn cho hầu hết người dùng, cho phép họ làm việc trong các Spaces ⏹️ mà họ được cấp quyền truy cập. |
 
 #### **6.2. Lớp 2: Nguyên tắc Truy cập tiện ích (Principles for Item Access)**
 
-  * **Mô tả:** Các nguyên tắc này đóng vai trò là kim chỉ nam cho Quản trị viên khi gán quyền truy cập vào các "vùng chứa" công việc và tài sản chung.
+- **Mô tả:** Các nguyên tắc này đóng vai trò là kim chỉ nam cho Quản trị viên khi gán quyền truy cập vào các "vùng chứa" công việc và tài sản chung.
 
-| Loại Mục | Nguyên tắc Phân quyền | Lý do & Lợi ích |
-| :--- | :--- | :--- |
-| **📂 Areas** | - **Admin:** CEO, Giám đốc TT\<br\>- **Manager:** Trưởng Phòng ban tương ứng\<br\>- **Member:** Nhóm của phòng ban đó | Tạo ra một môi trường làm việc tập trung cho mỗi phòng ban, giảm sự lộn xộn và cải thiện hiệu quả điều hướng. |
-| **👥 Groups** | - **Manager:** Trưởng phòng ban tương ứng\<br\>- **Member:** Tất cả thành viên trong Nhóm | Trao quyền cho các trưởng phòng ban tự quản lý thành viên nhóm của mình, tăng tính linh hoạt và giảm tải cho Quản trị viên Hệ thống. |
-| **Dashboards & Filters**| - **Admin:** Người tạo, CEO, Giám đốc TT\<br\>- **Manager:** Các Trưởng phòng ban liên quan\<br\>- **Member:** Các nhóm hoặc cá nhân được chia sẻ | Đảm bảo rằng dữ liệu tổng hợp và các chỉ số kinh doanh nhạy cảm chỉ được chia sẻ với đúng đối tượng. |
-| **📋 Functions**| - **Admin:** QTV Hệ thống, CEO, Giám đốc TT\<br\>- **Manager:** Người dùng có đặc quyền `App Manager`\<br\>- **Member:** Hầu hết nhân viên | Quản lý chặt chẽ các quy trình kinh doanh cốt lõi trong khi cho phép các trưởng phòng ban linh hoạt tinh chỉnh chúng và cho phép tất cả nhân viên áp dụng. |
-| **⏹️ Spaces** | - **Admin:** Trưởng nhóm hoặc Quản lý (ví dụ: Quản lý Học thuật)\<br\>- **Member:** Tất cả thành viên được mời | Đảm bảo người chịu trách nhiệm chính cho một không gian làm việc (như quản lý lớp học) có toàn quyền kiểm soát nó. |
+| Loại Mục                 | Nguyên tắc Phân quyền                                                                                                                             | Lý do & Lợi ích                                                                                                                                            |
+| :----------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------ | :--------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **📂 Areas**             | - **Admin:** CEO, Giám đốc TT\<br\>- **Manager:** Trưởng Phòng ban tương ứng\<br\>- **Member:** Nhóm của phòng ban đó                             | Tạo ra một môi trường làm việc tập trung cho mỗi phòng ban, giảm sự lộn xộn và cải thiện hiệu quả điều hướng.                                              |
+| **👥 Groups**            | - **Manager:** Trưởng phòng ban tương ứng\<br\>- **Member:** Tất cả thành viên trong Nhóm                                                         | Trao quyền cho các trưởng phòng ban tự quản lý thành viên nhóm của mình, tăng tính linh hoạt và giảm tải cho Quản trị viên Hệ thống.                       |
+| **Dashboards & Filters** | - **Admin:** Người tạo, CEO, Giám đốc TT\<br\>- **Manager:** Các Trưởng phòng ban liên quan\<br\>- **Member:** Các nhóm hoặc cá nhân được chia sẻ | Đảm bảo rằng dữ liệu tổng hợp và các chỉ số kinh doanh nhạy cảm chỉ được chia sẻ với đúng đối tượng.                                                       |
+| **📋 Functions**         | - **Admin:** QTV Hệ thống, CEO, Giám đốc TT\<br\>- **Manager:** Người dùng có đặc quyền `App Manager`\<br\>- **Member:** Hầu hết nhân viên        | Quản lý chặt chẽ các quy trình kinh doanh cốt lõi trong khi cho phép các trưởng phòng ban linh hoạt tinh chỉnh chúng và cho phép tất cả nhân viên áp dụng. |
+| **⏹️ Spaces**            | - **Admin:** Trưởng nhóm hoặc Quản lý (ví dụ: Quản lý Học thuật)\<br\>- **Member:** Tất cả thành viên được mời                                    | Đảm bảo người chịu trách nhiệm chính cho một không gian làm việc (như quản lý lớp học) có toàn quyền kiểm soát nó.                                         |
 
 #### **6.3. Lớp 3: Lược đồ Quyền & Thông báo (Permission & Notification Schemes)**
 
-  * **Mô tả:** Đây là lớp kiểm soát chi tiết nhất, định nghĩa "ai có thể làm gì" và "ai nhận được thông báo về điều gì" đối với từng Object riêng lẻ trong một Space.
+- **Mô tả:** Đây là lớp kiểm soát chi tiết nhất, định nghĩa "ai có thể làm gì" và "ai nhận được thông báo về điều gì" đối với từng Object riêng lẻ trong một Space.
 
-| Loại Lược đồ | Lược đồ được chọn cho Zenith English | Mô tả & Lý do |
-| :--- | :--- | :--- |
-| **Lược đồ Quyền** | **"Hạn chế vừa phải"** | **Cân bằng giữa bảo mật và cộng tác:** Mọi người trong Space có thể thấy công việc tồn tại, nhưng chỉ những người dùng được giao trực tiếp mới có thể xem chi tiết và cập nhật, bảo vệ dữ liệu nhạy cảm của học viên. |
-| **Lược đồ Thông báo**| **"Thông báo hành động chính cho người được giao trực tiếp"**| **Giảm nhiễu thông báo:** Chỉ các sự kiện quan trọng (thay đổi trạng thái, @mention) mới kích hoạt cảnh báo cho người dùng liên quan trực tiếp, giúp nhân viên như giáo viên và tư vấn viên tập trung vào các cập nhật cần hành động. |
+| Loại Lược đồ          | Lược đồ được chọn cho Zenith English                          | Mô tả & Lý do                                                                                                                                                                                                                         |
+| :-------------------- | :------------------------------------------------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Lược đồ Quyền**     | **"Hạn chế vừa phải"**                                        | **Cân bằng giữa bảo mật và cộng tác:** Mọi người trong Space có thể thấy công việc tồn tại, nhưng chỉ những người dùng được giao trực tiếp mới có thể xem chi tiết và cập nhật, bảo vệ dữ liệu nhạy cảm của học viên.                 |
+| **Lược đồ Thông báo** | **"Thông báo hành động chính cho người được giao trực tiếp"** | **Giảm nhiễu thông báo:** Chỉ các sự kiện quan trọng (thay đổi trạng thái, @mention) mới kích hoạt cảnh báo cho người dùng liên quan trực tiếp, giúp nhân viên như giáo viên và tư vấn viên tập trung vào các cập nhật cần hành động. |
 
------
+---
 
 ### **PHỤ LỤC: ƯỚC TÍNH KHỐI LƯỢNG CÔNG VIỆC**
 
-| Hạng mục Cấu hình | Số lượng |
-| :--- | :--- |
-| **Cấu trúc Tổ chức** | |
-| Areas (Phòng ban) | 5 |
-| **Bảng điều khiển, Bộ lọc & Lời nhắc**| |
-| Bảng điều khiển Toàn cục | 1 |
-| Bộ lọc đã lưu Toàn cục | 2 |
-| Lời nhắc theo Bộ lọc | 2 |
-| **Tự động hóa Toàn cục** | |
-| Quy tắc Tự động hóa Liên-hệ-thống | 5 |
-| Quy tắc Tự động hóa Liên-chức-năng | 5 |
-| **Quản lý Người dùng & Workspace** | |
-| Nhóm Toàn cục | 7 |
-| Vai trò Toàn cục | 6 |
-| Workspaces | 3 |
-| **TỔNG CỘNG** | **36** |
-
+| Hạng mục Cấu hình                      | Số lượng |
+| :------------------------------------- | :------- |
+| **Cấu trúc Tổ chức**                   |          |
+| Areas (Phòng ban)                      | 5        |
+| **Bảng điều khiển, Bộ lọc & Lời nhắc** |          |
+| Bảng điều khiển Toàn cục               | 1        |
+| Bộ lọc đã lưu Toàn cục                 | 2        |
+| Lời nhắc theo Bộ lọc                   | 2        |
+| **Tự động hóa Toàn cục**               |          |
+| Quy tắc Tự động hóa Liên-hệ-thống      | 5        |
+| Quy tắc Tự động hóa Liên-chức-năng     | 5        |
+| **Quản lý Người dùng & Workspace**     |          |
+| Nhóm Toàn cục                          | 7        |
+| Vai trò Toàn cục                       | 6        |
+| Workspaces                             | 3        |
+| **TỔNG CỘNG**                          | **36**   |
