Documentation edits made through Mintlify web editor

--- a/vi/03-thiet-ke/education/zenith-qlht.mdx
+++ b/vi/03-thiet-ke/education/zenith-qlht.mdx
@@ -100,23 +100,25 @@ Sơ lược Vị trí (Sneak peek)
   <Tab title="Workflow Diagram">
     **Class Workflow**
 
+    ![mermaid-diagram-2025-08-21-123937.png](/images/mermaid-diagram-2025-08-21-123937.png)
+
     ```
-                      ┌──────────> CANCELLED
+                      ┌──────────> ĐÃ HỦY
                       │
-    DRAFT → RECRUITING → IN PROGRESS → COMPLETED → ARCHIVED
+    BẢN NHÁP → ĐANG TUYỂN SINH → ĐANG DIỄN RA → ĐÃ HOÀN THÀNH → LƯU TRỮ
     ```
 
     _Luồng công việc của một Lớp học phản ánh vòng đời từ lúc lên kế hoạch, tuyển sinh, vận hành cho đến khi kết thúc._
   </Tab>
   <Tab title="Status Details">
-    | Status             | Business Logic                                                                                                                                         | Advanced Settings & Cross-Function Links                                                                                                                                                                                                                                                                                                          |
-    | :----------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-    | **1. DRAFT**       | Quản lý Học thuật đang lên kế hoạch chi tiết cho lớp: sắp xếp lịch, chọn giáo viên dự kiến. Lớp ở trạng thái này chưa hiển thị cho các phòng ban khác. | **Transition Permissions**: Academic Manager. <br /> **Data Input**: Lịch học, giáo viên, sĩ số tối đa cần được điền.                                                                                                                                                                                                                             |
-    | **2. RECRUITING**  | Lớp học được mở để tuyển sinh. Lớp đã sẵn sàng để nhận học viên đăng ký.                                                                               | **Transition Permissions**: Academic Manager. <br /> **Cross-Function Link**: Lớp học ở trạng thái này sẽ xuất hiện trong danh sách lựa chọn của `Function: CRM` (P. Tuyển sinh) để họ ghi danh học viên vào.                                                                                                                                     |
-    | **3. IN PROGRESS** | Lớp học đã chính thức bắt đầu buổi học đầu tiên.                                                                                                       | **Transition Permissions**: Academic Manager. <br /> **Automation**: Có thể khóa danh sách học viên (chỉ cho phép thêm/bớt với quyền đặc biệt) để ổn định sĩ số. Gửi thông báo "Chào mừng đến với lớp học" cho toàn bộ học viên.                                                                                                                  |
-    | **4. COMPLETED**   | Lớp học đã kết thúc buổi học cuối cùng.                                                                                                                | **Transition Permissions**: Academic Manager, Teacher. <br /> **Cross-Function Automation (CF-05)**: Chuyển sang trạng thái này **tự động kích hoạt** việc tạo ra các `Progress Report` (Báo cáo Tiến độ) con trong `Function: Student Affairs` (P. Công tác Học viên) cho từng học viên trong lớp, và giao cho giáo viên phụ trách điền báo cáo. |
-    | **5. ARCHIVED**    | Mọi báo cáo đã hoàn tất, điểm số đã được nhập. Lớp được đóng và lưu trữ.                                                                               | **Transition Permissions**: Academic Manager. <br /> **Đây là trạng thái kết thúc thành công.**                                                                                                                                                                                                                                                   |
-    | **6. CANCELLED**   | Lớp học bị hủy (ví dụ: không đủ sĩ số).                                                                                                                | **Transition Permissions**: Academic Manager. <br /> **Automation**: Gửi thông báo đến các học viên đã đăng ký và cho `Function: Invoicing` (P. Tài chính) để xử lý hoàn phí.                                                                                                                                                                     |
+    | Status                 | Business Logic                                                                                                                                         | Advanced Settings & Cross-Function Links                                                                                                                                                                                                                                                                                                          |
+    | :--------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+    | **1. BẢN NHÁP**        | Quản lý Học thuật đang lên kế hoạch chi tiết cho lớp: sắp xếp lịch, chọn giáo viên dự kiến. Lớp ở trạng thái này chưa hiển thị cho các phòng ban khác. | **Transition Permissions**: Academic Manager. <br /> **Data Input**: Lịch học, giáo viên, sĩ số tối đa cần được điền.                                                                                                                                                                                                                             |
+    | **2. ĐANG TUYỂN SINH** | Lớp học được mở để tuyển sinh. Lớp đã sẵn sàng để nhận học viên đăng ký.                                                                               | **Transition Permissions**: Academic Manager. <br /> **Cross-Function Link**: Lớp học ở trạng thái này sẽ xuất hiện trong danh sách lựa chọn của `Function: CRM` (P. Tuyển sinh) để họ ghi danh học viên vào.                                                                                                                                     |
+    | **3. ĐANG DIỄN RA**    | Lớp học đã chính thức bắt đầu buổi học đầu tiên.                                                                                                       | **Transition Permissions**: Academic Manager. <br /> **Automation**: Có thể khóa danh sách học viên (chỉ cho phép thêm/bớt với quyền đặc biệt) để ổn định sĩ số. Gửi thông báo "Chào mừng đến với lớp học" cho toàn bộ học viên.                                                                                                                  |
+    | **4. ĐÃ HOÀN THÀNH**   | Lớp học đã kết thúc buổi học cuối cùng.                                                                                                                | **Transition Permissions**: Academic Manager, Teacher. <br /> **Cross-Function Automation (CF-05)**: Chuyển sang trạng thái này **tự động kích hoạt** việc tạo ra các `Progress Report` (Báo cáo Tiến độ) con trong `Function: Student Affairs` (P. Công tác Học viên) cho từng học viên trong lớp, và giao cho giáo viên phụ trách điền báo cáo. |
+    | **5. LƯU TRỮ**         | Mọi báo cáo đã hoàn tất, điểm số đã được nhập. Lớp được đóng và lưu trữ.                                                                               | **Transition Permissions**: Academic Manager. <br /> **Đây là trạng thái kết thúc thành công.**                                                                                                                                                                                                                                                   |
+    | **6. ĐÃ HỦY**          | Lớp học bị hủy (ví dụ: không đủ sĩ số).                                                                                                                | **Transition Permissions**: Academic Manager. <br /> **Automation**: Gửi thông báo đến các học viên đã đăng ký và cho `Function: Invoicing` (P. Tài chính) để xử lý hoàn phí.                                                                                                                                                                     |
   </Tab>
   <Tab title="Data Fields">
     **Data Field Groups**
@@ -254,7 +256,7 @@ Sơ lược Vị trí (Sneak peek)
     - **`Xem ⏹️ Space`**: Tất cả các vai trò được định nghĩa ở trên có thể xem Space Quản lý Học thuật.
     - **`Xem & Sửa 🧊 Object`**:
       - **`Đối với Class`**: Chỉ `Quản lý Học thuật` và `Giáo viên` được gán trực tiếp mới có thể xem và sửa.
-      - **``Đối với Course và Teacher Profile``**: Chỉ `Quản lý Học thuật` mới có quyền tạo/sửa. Các vai trò khác chỉ có quyền xem.
+      - **`Đối với Course và Teacher Profile`**: Chỉ `Quản lý Học thuật` mới có quyền tạo/sửa. Các vai trò khác chỉ có quyền xem.
     - **Trò chuyện trong Đối tượng**: Bất kỳ ai có thể xem `🧊 Object` đều có thể tham gia trò chuyện.
   </Tab>
   <Tab title="Notifications (Thông báo)">
